<resources>
    <string name="app_name">Frog Lab</string>
    <string name="tab1name">Frog Lab</string>
    <string name="play">Laboratory</string>
    <string name="instructions">How To Play</string>
    <string name="about_label">About... </string>
    <string name="learn">Learn Genetics</string>
    <string name="database">Frog Database</string>
    <string name="options">Options</string>
    <string name="apptitle">Frog Lab</string>
    <string name="appsubtitle">A Genetics Simulator</string>
    <string name="male">\u2640</string>
    <string name="female">\u2642</string>
    <string name="family">Family</string>
    <string name="phenotype">Phenotype: </string>
    <string name="genotype">Genotype: </string>
    <string name="individual">Frog ID:</string>
    <string name="individual_database">Frog Name:</string>
    <string name="pref1_title">Difficulty</string>
    <string name="pref1_description">Choose problem difficulty. Start in Level 1 and 2 to learn about the different features of your model organism and their mode of inheritance. Then build a genetic map using Level 2 or Map All mode</string>
    <string name="pref2_title">Music</string>
    <string name="pref2_description">Background music</string>
    <string name="pref3_title">Cheating</string>
    <string name="pref3_description">Show Genotypes</string>
    <string name="save_frog_message">Save Frog to Database. Introduce Name:</string>
    <string name="save_frog_message2">Save Frog image. Introduce file name</string>
    <string name="database_prompt1">Select a male and a female to cross</string>
    <string name="database_prompt2">Cross selected individuals?</string>
    <string name="permission_required">Permission required</string>
    <string name="permission_justify_writemem">FrogLab needs access to storage in order to save images. All the other features will still work correctly if permission is denied.</string>
    <string name="permission_denied">Without access to storage, images can\'t be saved.</string>
    <string name="permission_granted">Now you can save frog images.</string>

    <string name="help_string0">Welcome to the FrogLab </string>
    <string name="help_string1">You are now a researcher interested in frog genetics. </string>
    <string name="help_string1b">Particularly, you are interested in how different features are inherited in a new tropical frog species. </string>
    <string name="help_string2">The problem: </string>
    <string name="help_string3">This frog species includes several color morphs (i.e., variations in colors and patterns), which have evolved in response to sexual selection and to scare away predators. Since it is a novel species, we don\'t know anything about how the different aspects of coloration are transmitted to the next generation. </string>
    <string name="help_string3b"> Fig. 1: Two individuals with different coloration patterns. </string>
    <string name="help_string4"> Your goals: </string>
    <string name="help_string5"> In order to understand the inheritance of color patterns in this species, you will pursue the following specific goals: </string>
    <string name="help_string6"> \tGoal #1: Learn how each trait is inherited (i.e., autosomal recessive, linked to sex, etc).</string>
    <string name="help_string7"> \tGoal #2: Learn how many loci are involved in coloration patterns.</string>
    <string name="help_string8"> \tGoal #3: Study linkage between loci and build a genetic map comprising the relative positions of all of them in the different chromosomes.</string>
    <string name="help_string8b"> Fig. 2: Genetic map of an arm of one of the fruit fly chromosomes.</string>

    <string name="help_string9"> How to do it: </string>
    <string name="help_string10">Like in all Genetics laboratories, your methodology will consist in crossing frogs (a female and a male) and look at the progeny. Over time, your crossing strategy and your understanding of genetics will improve. </string>
    <string name="help_string11">Don\'t forget your lab notebook to take track of all your experiments! We don\'t do it for you. </string>
    <string name="help_string12"> In the laboratory there are Individual cards and Family cards. </string>
    <string name="help_string13"> Fig. 3: Individual card. </string>
    <string name="help_string14"> Fig. 4: Family card. </string>
    <string name="help_string15"> Two individual cards can be selected to create a new Family. By pressing the top-right icons you can also save a frog to the Database (for instance, if, after several crossings, you obtain an interesting frog which you might want to use in future crossings) or export a .png picture of it. </string>
    <string name="help_string16"> Each time you set up a crossing, a new family card is created displaying the images and IDs of the two parents. Right under the Family card, the new offspring cards are shown. </string>
    <string name="help_string16b">NOTE: You can\'t set up crossings with individuals from different families. This is bad laboratory practice. </string>
    <string name="help_string17"> Frog nomenclature: </string>>
    <string name="help_string18"> The Frog ID (for instance, F2.5.38) is composed of three elements: the generation (F2), the family number (5) and the individual number (38). By convention, the generation of parental individuals is named "P0", and the subsequent offspring generations are named "F1", "F2", etc. </string>>
    <string name="help_string19"> Options Menu: </string>
    <string name="help_string20"> For Goal#1 you can use Difficulty Level 1 or Level 2. In these modes only alleles affecting the same feature segregate at the same time, so it is easier to draw conclusions. </string>
    <string name="help_string21"> For Goal#2 and Goal#3 you should use Level 3 and Map Mode. </string>
    <string name="help_string22"> Research in genetics can be tough. You can turn the Cheating Option on to be able to see the frog genotypes. However, we encourage you to use this option only after having played for a while, in order to check that you are right about your discoveries. This is an open problem game, so we don\'t provide solutions otherwise. </string>
    <string name="help_string23"> Good Luck! </string>
    <string name="about"> Carlos Mora 2021 </string>
</resources>
