<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/help_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:background="@color/colorIndividualCard"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/help_textview0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_string0"
                style="@style/Mistitulos1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/help_textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_string1"
                style="@style/MiTextoEnfasis"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/help_textview1b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_string1b"
                style="@style/MiCuerpoTexto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/help_textview2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_string2"
                style="@style/Mistitulos2"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/help_textview3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_string3"
                style="@style/MiCuerpoTexto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <ImageView
                android:id="@+id/help_image1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:src="@drawable/ic_help_image1" />

        <TextView
            android:id="@+id/help_textview3b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string3b"
            style="@style/MisPiesFigura"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string4"
            style="@style/Mistitulos2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string5"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string6"
            style="@style/MiTextoEnfasis"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string7"
            style="@style/MiTextoEnfasis"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string8"
            style="@style/MiTextoEnfasis"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/help_image6"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_help_image6" />
            <TextView
                android:id="@+id/help_textview8b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_string8b"
                style="@style/MisPiesFigura"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string9"
            style="@style/Mistitulos2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string10"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string11"
            style="@style/MiTextoEnfasis"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string12"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/help_image5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:src="@raw/help_image3d" />
        <TextView
            android:id="@+id/help_textview13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string13"
            style="@style/MisPiesFigura"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            <ImageView
                android:id="@+id/help_image4"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerInside"
                android:src="@raw/help_image4c" />
        <TextView
            android:id="@+id/help_textview14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string14"
            style="@style/MisPiesFigura"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        <TextView
            android:id="@+id/help_textview15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string15"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string16"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/help_textview16b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_string16b"
                style="@style/MiCuerpoTexto"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string17"
            style="@style/Mistitulos2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string18"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string19"
            style="@style/Mistitulos2"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string20"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string21"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/help_textview22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_string22"
            style="@style/MiCuerpoTexto"
            android:textAppearance="?android:attr/textAppearanceLarge" />
            <TextView
                android:id="@+id/help_textview23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:paddingBottom="32dp"
                android:layout_gravity="right"
                android:text="@string/help_string23"
                style="@style/Mistitulos1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>